Correções Swagger
